<resources>
    <string name="app_name">Lingering</string>
    <string name="library">Library</string>
    <string name="playlist">Playlist</string>
    <string name="folder">Folder</string>
    <string name="playing_queue">Playing Queue</string>
    <string name="now_playing">Now Playing</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- accessibility -->
    <string name="desc_nav_header_avatar">Select your avatar picture</string>
    <string name="desc_library_item_more">More options</string>

    <!-- audio library pagers -->
    <string name="library_track">TRACKS</string>
    <string name="library_album">ALBUMS</string>
    <string name="library_artist">ARTISTS</string>
    <string name="library_genre">GENRES</string>
</resources>
