<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/category"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library_music"
            android:title="@string/library" />
        <item
            android:id="@+id/nav_playlist"
            android:icon="@drawable/ic_playlist_play"
            android:title="@string/playlist" />
        <item
            android:id="@+id/nav_folder"
            android:icon="@drawable/ic_folder_open"
            android:title="@string/folder" />
        <item
            android:id="@+id/nav_queue"
            android:icon="@drawable/ic_music_note"
            android:title="@string/playing_queue" />
        <item
            android:id="@+id/nav_playing"
            android:checkable="false"
            android:icon="@drawable/ic_bookmark_music"
            android:title="@string/now_playing" />
    </group>

    <group
        android:id="@+id/other"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />
    </group>
</menu>